[package]
name = "user_lib"
version = "0.1.0"
author = ["Zijun Peng <crimmypeng@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target = "riscv64gc-unknown-none-elf"

[dependencies]
riscv = { path = "/home/rCore/riscv-master", features = ["inline-asm"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[profile.release]
debug = true